--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@ body {
 
 //・・・・・・・ 幅設定・・・・・・・
 @mixin width {
-  width: 100%;
+  width: 100vw;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -14,18 +14,16 @@ body {
 @mixin white ($background: #F7F7F7 , $color: #333333, $width: 100vw){
   background: $background;
   color: $color;
-  width: $width;
 }
 
 @mixin black ($background: #c0bebe , $color: #EAEAEA, $width: 100vw){
   background: $background;
   color: $color;
-  width: $width;
 }
 
 //・・・・・・・ レスポンシブwidth設定・・・・・・・
 $pc: 1024px; // PC
-$tab: 768px; // タブレット
+$tab: 480px; // タブレット
 
 @mixin pc {
   @media (min-width: ($pc)) {
@@ -177,8 +175,8 @@ $tab: 768px; // タブレット
 @mixin Backgroundimg {
   background-attachment: fixed;
   backface-visibility: hidden;
-  transform: translate3d(0,0,0);
   -webkit-backface-visibility: hidden;
+  transform: translate3d(0,0,0);
   -webkit-transform: translate3d(0,0,0);
   background-size: cover;
   background-position: center;
@@ -211,7 +209,14 @@ $tab: 768px; // タブレット
   @include white;
   height: 100vh;
   &__inner {
-    @include center;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
     h1 {
       text-align: center;
       margin-bottom: 30px;
@@ -270,7 +275,7 @@ $tab: 768px; // タブレット
       top: 0;
       left: 0;
       width: 50%;
-      height: 60%;
+      height: 40%;
       background: #333;
       animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
@@ -281,7 +286,7 @@ $tab: 768px; // タブレット
       top: 0;
       left: 0;
       width: 50%;
-      height: 60%;
+      height: 40%;
       background: #333;
       animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
@@ -296,7 +301,7 @@ $tab: 768px; // タブレット
     -webkit-animation: RightfadeInBack 4s ease-in 0s 1 normal;
 
     @include tab {
-      top: 70%;
+      top: 60%;
       right: 0;
       width: 80%;
       height: 10%;
@@ -305,7 +310,7 @@ $tab: 768px; // タブレット
     }
 
     @include pc {
-      top: 70%;
+      top: 60%;
       right: 0;
       width: 80%;
       height: 10%;
@@ -322,7 +327,7 @@ $tab: 768px; // タブレット
     @include effect-fade;
     color: #333333;
     position: absolute;
-    bottom: 15%;
+    bottom: 25%;
     left: 50%;
     z-index: 2;
   }
@@ -331,7 +336,7 @@ $tab: 768px; // タブレット
     @include centertransform;
     @include circle;
     position: absolute;
-    bottom: 5%;
+    bottom: 15%;
     left: 50%;
     width: 50px;
     height: 50px;
@@ -444,14 +449,13 @@ $tab: 768px; // タブレット
       }
       &__text--name {
         text-align: center;
-        // max-width: 500px;
         margin: 20px 0;
         position: relative;
       }
       &__text--name::after {
         position: absolute;
         content: '';
-        width: 50%;
+        width: 80%;
         bottom: -10px;
         left: 50%;
         @include centertransform;
@@ -571,10 +575,12 @@ $tab: 768px; // タブレット
 
 // ・・・・・・・・・Service・・・・・・・・・
 .Service {
-  @include width;
   @include black;
   display: block;
-  height: 500px;
+  &__inner {
+    @include width;
+  }
+
 }
 
 
